# file-organizer-rust

./: Cargo.toml  README.md
src/: main.rs
src/cli/: mod.rs
src/modules/: base.rs  mod.rs
src/modules/archive_manager/: mod.rs
src/modules/directory_flattener/: mod.rs
src/modules/file_categorizer/: mod.rs
src/modules/file_deduplicator/: mod.rs
src/modules/image_optimizer/: mod.rs
src/utils/: mod.rs
